# Bilibili-OpenGL-Tutorial

./: .gitignore  CMakeLists.txt  README.md  glad.c  main.cpp
application/: Application.cpp  Application.h  CMakeLists.txt
assets/shaders/: pixel.glsl  vertex.glsl
glframework/: CMakeLists.txt  core.h  shader.cpp  shader.h
wrapper/: CMakeLists.txt  errorcheck.cpp  errorcheck.h
